# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import schoolsRouter from "./schools";
+import usersRouter from "./users";
+import postsRouter from "./posts";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(adminRouter);
+router.use(schoolsRouter);
+router.use(usersRouter);
+router.use(postsRouter);
 
 export default router;
